# semgrep-utilities

./: .gitignore  README.md  api.py  convert.py  error.json  github_recent_contributors.py  import_semgrep_to_defect_dojo.py  sebas2.py  semgrep-pod.yml  update_pipeline_with_semgrep_task.py
.circleci/: config.yml
.cursor/: mcp.json
.cursor/rules/: semgrep.mdc
integrations/defectdojo/: import_semgrep_to_defect_dojo.py  python_client_defect_dojo_api.py
integrations/defectdojo-JSONCreatedUsingSemgrepAPI/: transformFindingsToJSON.py  uploadSemgrepJSONToDefectDojo.py
integrations/gitlab/: .gitlab-ci.yml  README.md  convert_sast_to_gl_sast.py  convert_sca_api_report_to_json_report.py  converted_sca_api_report_to_json_report.py  get_findings_json_format.py  sastGitLabScript.py  scaGitLabScript.py  scaGitLabScriptFinal.py  scaGitLabScriptv2.py  (+1 more)
maven/: transform2.py  transform3.py
scala/: build.sbt  transform.py
utilities/contributors/: .dockerignore  .gitignore  Dockerfile  README.md  ado_contributor_count.py  azure_contributors.py  bitbucket_contributor_count.py  github_recent_contributors.py  gitlab_contributor_count.py  pyproject.toml
utilities/contributors/src/contributors/: cli.py  main.py
utilities/contributors/src/contributors/clients/: api_client.py
utilities/contributors/src/contributors/commands/: get_contributors.py
utilities/contributors/src/contributors/models/: azure_devops_models.py  bitbucket_models.py  github_models.py  gitlab_models.py  reports.py
utilities/contributors/src/contributors/reporters/: contributor_reporters.py
(+161 files in other folders)
