[project]
name = "contributors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "black>=25.1.0",
    "click>=8.2.1",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
]

[project.scripts]
semgrep-contributors = "contributors.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"